--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "\"Simple web-based to-do list application\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Nsikan Udoyen",
   "license": "ISC",
